# src/LightOps.NeuralLens.WorkspaceApi/Domain/Mappers/WorkspaceViewModelMapper.cs
@@ -1,0 +1,21 @@
+﻿using LightOps.Mapping.Api.Mappers;
+using LightOps.NeuralLens.WorkspaceApi.Domain.Models;
+using LightOps.NeuralLens.WorkspaceApi.Models;
+
+namespace LightOps.NeuralLens.WorkspaceApi.Domain.Mappers;
+
+public class WorkspaceViewModelMapper : IMapper<Workspace, WorkspaceViewModel>
+{
+    public WorkspaceViewModel Map(Workspace source)
+    {
+        return new WorkspaceViewModel(
+            source.Id,
+            source.OrganizationId,
+            source.Name,
+            source.CreatedAt,
+            source.UpdatedAt)
+        {
+            Description = source.Description,
+        };
+    }
+}
